cleaned up image css to avoid overlap

--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,8 @@ body {
 }
         
 .card-img { 
-    max-height: 350px;
-    max-width: 245px;
+    height: 200px;
+    width: auto;
     overflow: hidden;
     border-radius: 5px;
     margin-left: 5%;
@@ -122,7 +122,7 @@ hr.solid {
     color: lightgray;
 }
 
-@media only screen and (min-width: 680px) {
+@media only screen and (min-width: 760px) {
     .card-img-box {
         padding-top: 25px;
         padding-bottom: 25px;
@@ -131,6 +131,7 @@ hr.solid {
     .card-img {
         margin-left: 0;
         box-shadow: 5px 5px 5px lightgrey;
+        height: 300px;
     }
     .card-content-box {
         width: 60%;
